--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   </head>
   <body> 
     <header id="top" class="main-header">
-      <span>Journey through the Sierra Nevada Mountains</span>
+      <span class="title">Journey through the Sierra Nevada Mountains</span>
       <h1>Lake Tahoe, California</h1>
     </header>
 		<div class="primary-content t-border">
-			<p>
+			<p class="intro">
 				Lake Tahoe is one of the most breathtaking attractions located in California. It's home to a number of ski resorts, summer outdoor recreation, and tourist attractions. Snow and skiing are a significant part of the area's reputation.
 			</p>
 			<a href="#">Find out more</a>
@@ -47,7 +47,7 @@
       </ol>
 		</div>
     
-		<footer id="main-footer" class="t-border">
+		<footer class="main-footer">
 			<p>All rights reserved to the state of <a href="#">California</a>.</p>
 			<a href="#top `">Back to top &raquo;</a>
 		</footer>
