--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   </head>
   <body> 
     <header id="top" class="main-header">
-      <span class="title">Journey through the Sierra Nevada Mountains</span>
-      <h1>Lake Tahoe, California</h1>
+      <span class="title">Journey through the Northern Areas Mountains of Hunza</span>
+      <h1>Lake Attabad, Hunza</h1>
     </header>
 		<div class="primary-content t-border">
 			<p class="intro">
-				Lake Tahoe is one of the most breathtaking attractions located in California. It's home to a number of ski resorts, summer outdoor recreation, and tourist attractions. Snow and skiing are a significant part of the area's reputation.
+				Attabad Lake is one of the most breathtaking attractions located in Gilgit Baltistan. It's home to a number of ski resorts, summer outdoor recreation, and tourist attractions. Snow and skiing are a significant part of the area's reputation.
 			</p>
 			<a href="#">Find out more</a>
         
@@ -28,12 +28,12 @@
 		<div class="secondary-content t-border">
       <h3>From Tents to Resorts</h3>
       <p>
-        Lake Tahoe is full of wonderful places to stay. You have the ability to sleep in the outdoors in a tent, or relax like a king at a five star resort. Here are our top three resorts:
+        Attabad Lake is full of wonderful places to stay. You have the ability to sleep in the outdoors in a tent, or relax like a king at a five star resort. Here are our top three resorts:
       </p>
       <ul>
-        <li><a href="#">Lake Tahoe Resort Hotel</a></li>
-        <li><a href="#">South Lake Tahoe Resorts</a></li>
-        <li><a href="#">Tahoe Ski Resort Lodging</a></li>
+        <li><a href="#">Attabad Lake Resort Hotel</a></li>
+        <li><a href="#">South Lake Attabad Resorts</a></li>
+        <li><a href="#">Attabad Ski Resort Lodging</a></li>
       </ul>			
       <h3>Pack Accordingly</h3>
       <p>
@@ -48,7 +48,7 @@
 		</div>
     
 		<footer class="main-footer">
-			<p>All rights reserved to the state of <a href="#">California</a>.</p>
+			<p>All rights reserved to the state of <a href="#">Gilgit Baltistan</a>.</p>
 			<a href="#top `">Back to top &raquo;</a>
 		</footer>
   </body>
