--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<p class="intro">
 				Attabad Lake is one of the most breathtaking attractions located in Gilgit Baltistan. It's home to a number of ski resorts, summer outdoor recreation, and tourist attractions. Snow and skiing are a significant part of the area's reputation.
 			</p>
-			<a href="#">Find out more</a>
+			<a class="callout" href="#">Find out more</a>
         
       <div class="wildlife">
         <h2>Check out all the Wildlife</h2>
@@ -22,7 +22,7 @@
           </p>
       </div>
 
-			<a href="#">See the Wildlife.</a>
+			<a class="callout" href="#">See the Wildlife.</a>
 		</div>
 
 		<div class="secondary-content t-border">
@@ -31,9 +31,9 @@
         Attabad Lake is full of wonderful places to stay. You have the ability to sleep in the outdoors in a tent, or relax like a king at a five star resort. Here are our top three resorts:
       </p>
       <ul>
-        <li><a href="#">Attabad Lake Resort Hotel</a></li>
-        <li><a href="#">South Lake Attabad Resorts</a></li>
-        <li><a href="#">Attabad Ski Resort Lodging</a></li>
+        <li><a href="#">Luxus Hunza Attabad Lake Resort Hotel</a></li>
+        <li><a href="#">Hunza Glamping Resorts</a></li>
+        <li><a href="#">Hidden Valley Lake Resort Lodging</a></li>
       </ul>			
       <h3>Pack Accordingly</h3>
       <p>
