--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Lake Tahoe</title>
+    <title>Attabad Lake</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body> 
@@ -27,8 +27,8 @@
 			<a class="callout" href="#">See the Wildlife.</a>
 		</div>
 
-		<div class="secondary-content t-border">
-      <div>
+		<div class="secondary-content t-border group">
+      <div class="resorts">
         <img src="img/resort.jpg" alt="Resorts">
         <h3>From Tents to Resorts</h3>
         <p>
@@ -41,7 +41,7 @@
         </ul>
       </div>
       
-      <div>
+      <div class="tips">
         <img src="img/mtn-landscape.jpg" alt="mountain landscape">
         <h3>Pack Accordingly</h3>
         <p>
@@ -58,7 +58,7 @@
     
 		<footer class="main-footer">
 			<p>All rights reserved to the state of <a href="#">Gilgit Baltistan</a>.</p>
-			<a href="#top `">Back to top &raquo;</a>
+			<a href="#top">Back to top &raquo;</a>
 		</footer>
   </body>
 </html>
