--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <h1>Lake Attabad, Hunza</h1>
       <img class="arrow" src="img/arrow.svg" alt="down arrow">
     </header>
-		<div class="primary-content t-border">
+		<div class="primary-content t-border"> 
 			<p class="intro">
 				Attabad Lake is one of the most breathtaking attractions located in Gilgit Baltistan. It's home to a number of ski resorts, summer outdoor recreation, and tourist attractions. Snow and skiing are a significant part of the area's reputation.
       </p>
@@ -20,7 +20,7 @@
       <div class="wildlife">
         <h2>Check out all the Wildlife</h2>  
           <p>
-            As spawning season approaches the fish acquire a humpback and protuberant jaw. After spawning they die and their carcasses provide a feast for gatherings of <a href="#">mink</a>, <a href="#">bears</a>, and <a href="#">Bald eagles</a>.
+            As spawning season approaches the fish acquire a humpback and protuberant jaw. After spawning they die and their carcasses provide a feast for gatherings of <a href="https://en.wikipedia.org/wiki/Markhor" target="_blank">Markhor</a>, <a href="https://en.wikipedia.org/wiki/Himalayan_brown_bear" target="_blank">Himalayan brown bear</a>, and <a href="https://en.wikipedia.org/wiki/Golden_eagle" target="_blank">Golden Eagles</a>.
           </p>
       </div>
 
@@ -35,9 +35,9 @@
           Attabad Lake is full of wonderful places to stay. You have the ability to sleep in the outdoors in a tent, or relax like a king at a five star resort. Here are our top three resorts:
         </p>
         <ul>
-          <li><a href="#">Luxus Hunza Attabad Lake Resort Hotel</a></li>
-          <li><a href="#">Hunza Glamping Resorts</a></li>
-          <li><a href="#">Hidden Valley Lake Resort Lodging</a></li>
+          <li><a href="https://www.tripadvisor.com/Hotel_Review-g469409-d17795067-Reviews-Luxus_Hunza_Attabad_Lake_Resort-Hunza_Gilgit_Baltistan.html" target="_blank">Luxus Hunza Attabad Lake Resort Hotel</a></li>
+          <li><a href="https://www.booking.com/hotel/pk/hunza-glamping-resort-hunza-valley.html" target="_blank">Hunza Glamping Resorts</a></li>
+          <li><a href="https://www.tripadvisor.com/Hotel_Review-g469409-d13002969-Reviews-Hidden_Valley_Lake_Resort-Hunza_Gilgit_Baltistan.html" target="_blank">Hidden Valley Lake Resort Lodging</a></li>
         </ul>
       </div>
       
@@ -57,7 +57,7 @@
 		</div>
     
 		<footer class="main-footer">
-			<p>All rights reserved to the state of <a href="#">Gilgit Baltistan</a>.</p>
+			<p>All rights reserved to the state of <a href="http://www.gilgitbaltistan.gov.pk/" target="_blank">Gilgit Baltistan</a>.</p>
 			<a href="#top">Back to top &raquo;</a>
 		</footer>
   </body>
